--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "c": "MODE=etherscan node src/index.js"
+    "c": "MODE=etherscan node src/index.js",
+    "eth": "MODE=ethereum node src/index.js",
+    "cfx": "MODE=conflux node src/index.js"
   },
   "dependencies": {
     "chalk": "^3.0.0",
     "cheerio": "^1.0.0-rc.3",
+    "confluxjs-transaction": "^0.0.1-alpha.2",
+    "ethereumjs-tx": "^2.1.2",
+    "ethereumjs-util": "^6.2.0",
     "needle": "^2.4.0",
     "q": "^1.5.1"
   }
