--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ethereumjs-tx": "^2.1.2",
     "ethereumjs-util": "^6.2.0",
     "needle": "^2.4.0",
-    "q": "^1.5.1"
+    "q": "^1.5.1",
+    "sleep": "^6.1.0"
   }
 }
