--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^3.0.0",
     "cheerio": "^1.0.0-rc.3",
     "confluxjs-transaction": "^0.0.1-alpha.2",
+    "dotenv": "^8.2.0",
     "ethereumjs-tx": "^2.1.2",
     "ethereumjs-util": "^6.2.0",
     "needle": "^2.4.0",
