--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ethereumjs-util": "^6.2.0",
     "needle": "^2.4.0",
     "q": "^1.5.1",
-    "sleep": "^6.1.0"
+    "sleep": "^6.1.0",
+    "winston": "^3.2.1"
   }
 }
